# rename_notes

./: .env.exemple  Cargo.toml  README.md
src/: lib.rs  main.rs  messages.rs
tests/: integration_test.rs  integration_test_with_sub_dirs.rs  integration_test_with_sub_notes.rs
tests/common/: mod.rs
