[package]
name = "rename_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
lazy_static = "1.5.0"
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.10.1"
counter = "0.6.0"
pretty_assertions = "1.4.1"